<resources>
    <string name="app_name" translatable="false">medicare</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="label_medicare" translatable="false">medicare</string>
    <string name="label_hi">Hai,</string>
    <string name="label_example_name" translatable="false">Rifdah Inas Nazhifah</string>
    <string name="label_example_place" translatable="false">Ikea Sentul Main Entrance</string>
    <string name="label_example_time">In: 9.30 AM</string>
    <string name="label_example_duration">1 Jam 21 Menit</string>
    <string name="label_check_out">Check-Out</string>
    <string name="label_vaccine_certificate">Sertifikat Vaksin</string>
    <string name="label_email">Email</string>
    <string name="label_example_email" translatable="false">rfdnazhifah@gmail.com</string>
    <string name="label_gender">Jenis Kelamin</string>
    <string name="label_example_gender">Perempuan</string>

    <string-array name="menu_home_title">
        <item>Sertifikat Vaksin</item>
        <item>Hasil Tes COVID-19</item>
        <item>EHAC</item>
        <item>Riwayat Check-In</item>
        <item>Aturan Perjalanan</item>
        <item>Teledokter</item>
        <item>Pelayanan Kesehatan</item>
        <item>Statistik COVID-19</item>
        <item>Daftar Vaksin</item>
    </string-array>

    <string-array name="menu_home_icon">
        <item>@drawable/ic_certificate</item>
        <item>@drawable/ic_covid_test_result</item>
        <item>@drawable/ic_ehac</item>
        <item>@drawable/ic_checkin_history</item>
        <item>@drawable/ic_travel_regulation</item>
        <item>@drawable/ic_telemedicine</item>
        <item>@drawable/ic_healthcare</item>
        <item>@drawable/ic_covid_statistic</item>
        <item>@drawable/ic_vaccine_register</item>
    </string-array>
</resources>