<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.ProfileFragment"
    android:background="@color/blue_base">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraint_top_profile_fragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toTopOf="@id/constraint_bottom_profile_fragment">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/iv_profile"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/img_profile"
                android:layout_marginTop="45dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_example_name"
                android:textColor="@color/white"
                android:fontFamily="@font/montserrat_semibold"
                android:textSize="16sp"
                android:layout_marginTop="15dp"
                app:layout_constraintStart_toStartOf="@id/iv_profile"
                app:layout_constraintTop_toBottomOf="@id/iv_profile"
                app:layout_constraintEnd_toEndOf="@id/iv_profile"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraint_bottom_profile_fragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="200dp"
            android:background="@drawable/bg_dashboard"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/constraint_top_profile_fragment"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraint_email_profile_fragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="26dp"
                android:paddingVertical="10dp"
                android:layout_marginTop="30dp"
                app:layout_constraintStart_toStartOf="@id/constraint_bottom_profile_fragment"
                app:layout_constraintTop_toTopOf="@id/constraint_bottom_profile_fragment"
                app:layout_constraintEnd_toEndOf="@id/constraint_bottom_profile_fragment">

                <TextView
                    android:id="@+id/tv_profile_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_email"
                    android:fontFamily="@font/montserrat_semibold"
                    android:textColor="@color/dark_font"
                    android:textSize="12sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

                <TextView
                    android:id="@+id/tv_profile_email_content"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_example_email"
                    android:fontFamily="@font/montserrat_medium"
                    android:textColor="@color/dark_font"
                    android:textSize="12sp"
                    android:layout_marginTop="3dp"
                    app:layout_constraintStart_toStartOf="@id/tv_profile_email"
                    app:layout_constraintTop_toBottomOf="@id/tv_profile_email" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraint_gender_profile_fragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="26dp"
                android:paddingVertical="10dp"
                app:layout_constraintStart_toStartOf="@id/constraint_email_profile_fragment"
                app:layout_constraintTop_toBottomOf="@+id/constraint_email_profile_fragment"
                app:layout_constraintEnd_toEndOf="@id/constraint_email_profile_fragment">

                <TextView
                    android:id="@+id/tv_profile_gender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_gender"
                    android:fontFamily="@font/montserrat_semibold"
                    android:textColor="@color/dark_font"
                    android:textSize="12sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

                <TextView
                    android:id="@+id/tv_profile_gender_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_example_gender"
                    android:fontFamily="@font/montserrat_medium"
                    android:textColor="@color/dark_font"
                    android:textSize="12sp"
                    android:layout_marginTop="3dp"
                    app:layout_constraintStart_toStartOf="@id/tv_profile_gender"
                    app:layout_constraintTop_toBottomOf="@id/tv_profile_gender"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>